# slack-channel-manager

./: .gitignore  .replit  README.md  channel-ids.csv  channel_manager.py  channels.csv  create_channels.py  pyproject.toml
channel_manager/: __init__.py  add_channel_members.py  client.py  commands.py  utils.py
channel_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: bulk-message-channels.csv  bulk-message-template.jinja
