[tool.poetry]
name = "channel_manager"
version = "0.1.0"
description = ""
authors = ["Oliver Steele <steele@osteele.com>"]

[tool.poetry.scripts]
create_channels = "channel_manager:create_channels_from_csv"
write_csv = "channel_manager:write_csv"
post_messages = "channel_manager:post_messages"
set_pins = "channel_manager:set_pins"

[tool.poetry.dependencies]
python = "^3.8"
slack-sdk = "^3.6.0"
pandas = "^1.2.4"
Jinja2 = "^3.0.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
